@@ -4,7 +4,8 @@ Released 2.4.17 2014-xx-xx
 Changes since 2.4.16:
 
 Lib/
-* 
+* New hook syncrepl_refreshdone() in ldap.syncrepl.SyncReplConsumer
+  (thanks to Petr Spacek)
 
 Modules/
 * Added support for getting file descriptor of connection
@@ -1122,4 +1123,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.326 2014/09/12 12:02:21 stroeder Exp $
+$Id: CHANGES,v 1.327 2014/09/25 16:31:00 stroeder Exp $
